link open in new tab

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
     <p class="Occupation">"Front-end developer and Dreamer."</p>
     <div class="socialmedia">
       <div class="links github">
-        <a href="https://github.com/THESOURCEC0D3"><h4>GitHub</h4></a>
+        <a href="https://github.com/THESOURCEC0D3" target="_blank"><h4>GitHub</h4></a>
       </div>
       <div class="links instagram">
-        <a href="https://www.instagram.com/_pr3cious.jt_/"><h4>Instagram</h4></a>
+        <a href="https://www.instagram.com/_pr3cious.jt_/" target="_blank"><h4>Instagram</h4></a>
       </div>
       <div class="links linkedin">
-        <a href="https://www.linkedin.com/in/thesourcec0d3/"><h4>LinkedIn</h4></a>
+        <a href="https://www.linkedin.com/in/thesourcec0d3/" target="_blank"><h4>LinkedIn</h4></a>
       </div>
       <div class="links x">
-        <a href="https://x.com/THESOURCEC0D3"><h4>X</h4></a>
+        <a href="https://x.com/THESOURCEC0D3" target="_blank"><h4>X</h4></a>
       </div>
     </div>
   </div>    
